base/messaging-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  labels:
    app: messaging-service
spec:
  type: ClusterIP
  selector:
    app: messaging-service
  ports:
    - name: http
      port: 80
      targetPort: 4000
      protocol: TCP
    - name: grpc
      port: 4001
      targetPort: 4001
      protocol: TCP
